@@ -12,6 +12,7 @@ New Features:
   - Controller API extension - v2 (ORCJAVA-492)
   - Added Alarm Protocol (ORCJAVA-508)
   - Replace RXTX library with nrjavaserial library (ORCJAVA-449)
+  - Add support for dynamic command values to Alarm Protocol (ORCJAVA-512)
 
 Bug Fixes:
 
